[package]
name = "redis-shield"
version = "0.4.1"
authors = ["Alex Yarotsky <yarotsky.alex@gmail.com>"]
edition = "2021"
description = "Redis module that implements the token bucket algorithm to do rate limiting as a native command"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ayarotsky/redis-shield"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = "2.0.7"
num = "0.4"
# Fix for RUSTSEC-2024-0006: Multiple issues involving quote API
shlex = "1.3.0"

[dev-dependencies]
redis = "0.30"

[profile.release]
lto = true
codegen-units = 1
strip = true
