[package]
name = "redis-shield"
version = "1.0.0"
authors = ["Alex Yarotsky <yarotsky.alex@gmail.com>"]
edition = "2021"
rust-version = "1.91.1"
description = "Redis module that implements the token bucket algorithm to do rate limiting as a native command"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ayarotsky/redis-shield"
exclude = ["target/", "*.log", "*.tmp"]

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = "2.0.7"
# Fix for RUSTSEC-2024-0006: Multiple issues involving quote API
shlex = "1.3.0"
# Fast integer-to-string conversion using stack buffers (zero allocations)
itoa = "1.0.17"

[dev-dependencies]
redis = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "shield_benchmarks"
harness = false

[lints.clippy]
all = { level = "deny", priority = -1 }
doc_overindented_list_items = "allow"
